Bug fixes: Have bar overflow, List index out of range. Updated findArtist interface

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -86,6 +86,10 @@ h1{
 .smalltext{
 	font-size: 11px;
 	}
+.mediumtext{
+	font-size: 16px;
+	margin-left: 100px;
+	}
 .bigtext{
 	font-size: 22px;
 	}
